--- a/trunk/test/project/SimpleNetworkTest.vcxproj
+++ b/trunk/test/project/SimpleNetworkTest.vcxproj
@@ -96,7 +96,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\..\simplenet\src;..\..\common\src</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\simplenetwork\src;..\..\common\src</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -130,7 +130,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\..\simplenet\src;..\..\common\src</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\simplenetwork\src;..\..\common\src</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
